# Program-Solutions

./: .gitignore  3.4.Homework  Labs 3 (Taxes)  Labs 3 (new signups to FINKI)  README.md
1st Midterm/EN_Exercises_First_Partial_Exam/: 1.cpp  10.cpp  11.cpp  2.cpp  3.cpp  6.cpp  7.cpp
1st Midterm/MK_Exercises_for_the_first_partial_exam/: 12.cpp  6.cpp  7.cpp  8.cpp
2nd Midterm/: 2.cpp  8.cpp
2nd Midterm/EN/: 10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  26.cpp  27.cpp  28.cpp  29.cpp  3.cpp  30.cpp  31.cpp  32.cpp  33.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
2nd Midterm/MK/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  9.cpp
AdditionalTasks2ndMidterm/MK/: 1.cpp
EN_Exercises_First_Partial_Exam/: 1  1.cpp  12.cpp  4.cpp  9.cpp  CMakeLists.txt
EN_Exercises_First_Partial_Exam/output/: 1
Exercises (for the first partial exam)/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  2.c  3.cpp  4.cpp  5.cpp  6.cpp  7.c  8.cpp  CMakeLists.txt
Lab3 (Monday)/: Lab3_Finki_enroll.cpp  Lab3_Taxes.cpp  Lab3_divisible_by_3.cpp  Labs 3_Taxes.cpp
Lab3/Lab3 (Monday)/: Lab3_Taxes.cpp
Lab3/Lab3_Monday/: CMakeLists.txt  Lab3_achivments.cpp
Lab3/Lab3_Wednesday/: lab3_movies.cpp
Lab3/Lab_Thursday/: 2.cpp  (+2 more)
Lab4/: 2.cpp  3.cpp
Lab5/: 1.cpp  2.cpp  3.cpp
MK_Exercises_for_the_first_partial_exam/: 2.cpp  3.cpp  CMakeLists.txt
Задачи за вежбање за прв колоквиум/: 1.cpp  10.cpp  11.cpp  13.cpp  4.cpp  5.cpp  9.cpp
(+98 files in other folders)
