cmake_minimum_required(VERSION 3.26)

project(Exercises (for the first partial exam))

set(CMAKE_CXX_STANDARD 23)

add_executable(task1 1.cpp)
# 2nd is in c
add_executable(task3 3.cpp)
add_executable(task4 4.cpp)
add_executable(task5 5.cpp)
add_executable(task6 6.cpp)
# 7th is in c
add_executable(task8 8.cpp)
add_executable(task9 9.cpp)
add_executable(task10 10.cpp)
add_executable(task11 11.cpp)
add_executable(task12 12.cpp)
add_executable(task13 13.cpp)